data/diff_tests/wasmtime/return_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3090.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8a\80\80\80\00\02\60"
    "\01\7f\01\7f\60\00\01\7f\02\93\80\80\80\00\01\03"
    "\65\6e\76\0b\6c\61\72\67\65\5f\73\74\61\63\6b\00"
    "\00\03\82\80\80\80\00\01\01\07\9a\80\80\80\00\01"
    "\16\74\65\73\74\4c\61\72\67\65\53\74\61\63\6b\4f"
    "\76\65\72\66\6c\6f\77\00\01\0a\9f\80\80\80\00\01"
    "\99\80\80\80\00\00\41\00\10\00\10\00\10\00\10\00"
    "\10\00\10\00\10\00\10\00\10\00\10\00\0f\0b"
  )
""
)